Fix address link color on mobile version

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -38,6 +38,7 @@
 }
 .name {
   margin-top: 15px;
+  color: $white;
 }
 
 
