--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -34,11 +34,9 @@ body {
   }
 
   a {
-  color: #fff;
   text-decoration: none;
   }
   a:hover {
-  color: #fff;
   text-decoration: none;
   }
 }
